fix: Correct Terraform directory paths in GitHub Actions
- Remove conflicting working-directory from workflow steps
- Use -chdir flag in run-terraform.sh for proper directory execution
- Fixes 'No configuration files' error in terraform plan
- Both media-stack and network-vm jobs now use correct Terraform directories

--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -71,7 +71,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Terraform Init
-        working-directory: terraform/dev/media-stack
         env:
           TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
           TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
@@ -79,10 +78,9 @@ jobs:
           TF_VAR_vault_token: ${{ env.VAULT_TOKEN }}
         run: |
           cd /app/infra-platform
-          ./scripts/run-terraform.sh init
+          ./scripts/run-terraform.sh -chdir=terraform/dev/media-stack init
 
       - name: Terraform Plan
-        working-directory: terraform/dev/media-stack
         env:
           TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
           TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
@@ -90,11 +88,10 @@ jobs:
           TF_VAR_vault_token: ${{ env.VAULT_TOKEN }}
         run: |
           cd /app/infra-platform
-          ./scripts/run-terraform.sh plan -out=tfplan
+          ./scripts/run-terraform.sh -chdir=terraform/dev/media-stack plan -out=tfplan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/dev' && (github.event.inputs.terraform_action == 'apply' || github.event.inputs.terraform_action == '')
-        working-directory: terraform/dev/media-stack
         env:
           TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
           TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
@@ -102,7 +99,7 @@ jobs:
           TF_VAR_vault_token: ${{ env.VAULT_TOKEN }}
         run: |
           cd /app/infra-platform
-          ./scripts/run-terraform.sh apply -auto-approve tfplan
+          ./scripts/run-terraform.sh -chdir=terraform/dev/media-stack apply -auto-approve tfplan
 
   terraform-network-vm:
     needs: detect-changes
@@ -113,7 +110,6 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Terraform Init
-        working-directory: terraform/dev/network-vm
         env:
           TF_VAR_pve_api: ${{ secrets.PVE_API }}
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
@@ -123,10 +119,9 @@ jobs:
           TF_VAR_vault_address: ${{ env.VAULT_ADDR }}
         run: |
           cd /app/infra-platform
-          ./scripts/run-terraform.sh init
+          ./scripts/run-terraform.sh -chdir=terraform/dev/network-vm init
 
       - name: Terraform Plan
-        working-directory: terraform/dev/network-vm
         env:
           TF_VAR_pve_api: ${{ secrets.PVE_API }}
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
@@ -136,11 +131,10 @@ jobs:
           TF_VAR_vault_address: ${{ env.VAULT_ADDR }}
         run: |
           cd /app/infra-platform
-          ./scripts/run-terraform.sh plan -out=tfplan
+          ./scripts/run-terraform.sh -chdir=terraform/dev/network-vm plan -out=tfplan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/dev' && (github.event.inputs.terraform_action == 'apply' || github.event.inputs.terraform_action == '')
-        working-directory: terraform/dev/network-vm
         env:
           TF_VAR_pve_api: ${{ secrets.PVE_API }}
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
@@ -150,7 +144,7 @@ jobs:
           TF_VAR_vault_address: ${{ env.VAULT_ADDR }}
         run: |
           cd /app/infra-platform
-          ./scripts/run-terraform.sh apply -auto-approve tfplan
+          ./scripts/run-terraform.sh -chdir=terraform/dev/network-vm apply -auto-approve tfplan
 
   ansible-media-stack:
     needs: [detect-changes, terraform-media-stack]
