fix: Pass environment variables to Terraform containers
- Add -e flags to pass TF_VAR_* and VAULT_* variables to containers
- Update all Terraform workflow steps to use environment secrets
- Fixes 'No value for required variable' errors in GitHub Actions
- Variables now properly passed from GitHub Actions to Terraform

--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -75,7 +75,8 @@ jobs:
           TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
           TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
           TF_VAR_proxmox_password: ${{ secrets.PVE_PASS }}
-          TF_VAR_vault_token: ${{ env.VAULT_TOKEN }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         run: |
           cd /app/infra-platform
           ./scripts/run-terraform.sh -chdir terraform/dev/media-stack init
@@ -85,7 +86,8 @@ jobs:
           TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
           TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
           TF_VAR_proxmox_password: ${{ secrets.PVE_PASS }}
-          TF_VAR_vault_token: ${{ env.VAULT_TOKEN }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         run: |
           cd /app/infra-platform
           ./scripts/run-terraform.sh -chdir terraform/dev/media-stack plan -out=tfplan
@@ -96,7 +98,8 @@ jobs:
           TF_VAR_proxmox_api_url: ${{ secrets.PVE_API }}
           TF_VAR_proxmox_user: ${{ secrets.PVE_USER }}
           TF_VAR_proxmox_password: ${{ secrets.PVE_PASS }}
-          TF_VAR_vault_token: ${{ env.VAULT_TOKEN }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         run: |
           cd /app/infra-platform
           ./scripts/run-terraform.sh -chdir terraform/dev/media-stack apply -auto-approve tfplan
@@ -115,8 +118,9 @@ jobs:
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
           TF_VAR_pve_pass: ${{ secrets.PVE_PASS }}
           TF_VAR_ssh_user: ${{ secrets.SSH_USER }}
-          TF_VAR_vault_token: ${{ env.VAULT_TOKEN }}
-          TF_VAR_vault_address: ${{ env.VAULT_ADDR }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         run: |
           cd /app/infra-platform
           ./scripts/run-terraform.sh -chdir terraform/dev/network-vm init
@@ -127,8 +131,9 @@ jobs:
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
           TF_VAR_pve_pass: ${{ secrets.PVE_PASS }}
           TF_VAR_ssh_user: ${{ secrets.SSH_USER }}
-          TF_VAR_vault_token: ${{ env.VAULT_TOKEN }}
-          TF_VAR_vault_address: ${{ env.VAULT_ADDR }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         run: |
           cd /app/infra-platform
           ./scripts/run-terraform.sh -chdir terraform/dev/network-vm plan -out=tfplan
@@ -140,8 +145,9 @@ jobs:
           TF_VAR_pve_user: ${{ secrets.PVE_USER }}
           TF_VAR_pve_pass: ${{ secrets.PVE_PASS }}
           TF_VAR_ssh_user: ${{ secrets.SSH_USER }}
-          TF_VAR_vault_token: ${{ env.VAULT_TOKEN }}
-          TF_VAR_vault_address: ${{ env.VAULT_ADDR }}
+          TF_VAR_vault_token: ${{ secrets.VAULT_TOKEN }}
+          TF_VAR_vault_address: ${{ secrets.VAULT_ADDR }}
+          VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
         run: |
           cd /app/infra-platform
           ./scripts/run-terraform.sh -chdir terraform/dev/network-vm apply -auto-approve tfplan
