--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ terraform.rc
 *.logvault
 vault_1.15.2_linux_amd64.zip
 vault
+vault
+vault_1.15.2_linux_amd64.zip
+vault
+vault_1.15.2_linux_amd64.zip
