--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -209,7 +209,7 @@ jobs:
       - name: Ensure Ansible dependencies are available
         run: |
           cd /app/infra-platform
-          ./scripts/run-ansible.sh galaxy collection install community.general community.hashi_vault || true
+          ansible-galaxy collection install community.general community.hashi_vault || true
 
       - name: Retrieve SSH key from Vault
         env:
@@ -219,6 +219,7 @@ jobs:
           mkdir -p ~/.ssh
           vault kv get -field=private secret/ssh_keys/media-stack_worker > ~/.ssh/media-stack_worker_id_ed25519
           chmod 600 ~/.ssh/media-stack_worker_id_ed25519
+          chown $(whoami):$(whoami) ~/.ssh/media-stack_worker_id_ed25519
 
       - name: Run Ansible playbook via container
         env:
