--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -145,8 +145,16 @@ jobs:
             -e VAULT_TOKEN="$VAULT_TOKEN" \
             -v "$PWD:/app/infra-platform" \
             -w /app/infra-platform \
-            hashicorp/vault:latest \
-            /app/infra-platform/scripts/vault-generate-network-vm-key.sh "$VAULT_ADDR" "$VAULT_TOKEN"
+            ubuntu:22.04 \
+            bash -c "\
+              apt-get update && \
+              apt-get install -y curl unzip && \
+              curl -fsSL https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o vault.zip && \
+              unzip vault.zip && \
+              mv vault /usr/local/bin/ && \
+              chmod +x /usr/local/bin/vault && \
+              /app/infra-platform/scripts/vault-generate-network-vm-key.sh \"$VAULT_ADDR\" \"$VAULT_TOKEN\" \
+            "
 
       - name: Terraform Init
         env:
