fix(network-vm): deploy to benedict and ensure old LXCs/VMs are deleted before provisioning

--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -131,6 +131,15 @@ jobs:
     if: needs.detect-changes.outputs.network_vm_changed == 'true'
     runs-on: self-hosted
     steps:
+      - name: Delete old network-vm LXC (vmid 220) on all nodes
+        env:
+          TF_VAR_pve_api: ${{ secrets.PVE_API }}
+          TF_VAR_pve_user: ${{ secrets.PVE_USER }}
+          TF_VAR_pve_pass: ${{ secrets.PVE_PASS }}
+        run: |
+          cd /app/infra-platform
+          chmod +x ./scripts/delete-network-vm.sh
+          ./scripts/delete-network-vm.sh
       - name: Checkout code
         uses: actions/checkout@v4
 
