--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -224,7 +224,7 @@ jobs:
       - name: Ensure Ansible dependencies are available
         run: |
           cd /app/infra-platform
-          ansible-galaxy collection install community.general community.hashi_vault || true
+          ./scripts/run-ansible.sh galaxy collection install community.general community.hashi_vault
 
       - name: Retrieve SSH key from Vault
         env:
@@ -273,7 +273,7 @@ jobs:
       - name: Ensure Ansible dependencies are available
         run: |
           cd /app/infra-platform
-          ansible-galaxy collection install community.general community.hashi_vault || true
+          ./scripts/run-ansible.sh galaxy collection install community.general community.hashi_vault
 
       - name: Run Ansible playbook via container
         env:
