--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -236,10 +236,10 @@ jobs:
           VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
           VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
         run: |
-          mkdir -p ~/.ssh
-          vault kv get -field=private secret/ssh_keys/media-stack_worker > ~/.ssh/media-stack_worker_id_ed25519
-          chmod 600 ~/.ssh/media-stack_worker_id_ed25519
-          chown $(whoami):$(whoami) ~/.ssh/media-stack_worker_id_ed25519
+          sudo mkdir -p ~/.ssh
+          sudo vault kv get -field=private secret/ssh_keys/media-stack_worker > ~/.ssh/media-stack_worker_id_ed25519
+          sudo chmod 600 ~/.ssh/media-stack_worker_id_ed25519
+          sudo chown $(whoami):$(whoami) ~/.ssh/media-stack_worker_id_ed25519
 
       - name: Run Ansible playbook via container
         env:
