--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -237,7 +237,8 @@ jobs:
           VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
         run: |
           mkdir -p ~/.ssh
-          vault kv get -field=private secret/ssh_keys/media-stack_worker > ~/.ssh/media-stack_worker_id_ed25519
+          rm -f ~/.ssh/media-stack_worker_id_ed25519
+          vault kv get -field=private secret/ssh_keys/media-stack_worker | tee ~/.ssh/media-stack_worker_id_ed25519 > /dev/null
           chmod 600 ~/.ssh/media-stack_worker_id_ed25519
 
       - name: Run Ansible playbook via container
@@ -285,7 +286,8 @@ jobs:
           VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
         run: |
           mkdir -p ~/.ssh
-          vault kv get -field=private secret/ssh_keys/network-vm_worker > ~/.ssh/network-vm_worker_id_ed25519
+          rm -f ~/.ssh/network-vm_worker_id_ed25519
+          vault kv get -field=private secret/ssh_keys/network-vm_worker | tee ~/.ssh/network-vm_worker_id_ed25519 > /dev/null
           chmod 600 ~/.ssh/network-vm_worker_id_ed25519
 
       - name: Ensure Ansible dependencies are available
