Install Vault to user-writable directory without sudo
Instead of trying to use sudo (which requires password interactively),
install vault to ~/.local/bin which is user-writable. Add ~/.local/bin
to GITHUB_PATH so vault is available in subsequent steps.

This approach avoids sudo password prompts entirely.

--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -233,10 +233,12 @@ jobs:
 
       - name: Install Vault CLI
         run: |
+          mkdir -p ~/.local/bin
           curl -fsSL https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o /tmp/vault.zip
-          sudo unzip -o /tmp/vault.zip -d /usr/local/bin/
-          sudo chmod +x /usr/local/bin/vault
+          unzip -o /tmp/vault.zip -d ~/.local/bin/
+          chmod +x ~/.local/bin/vault
           rm /tmp/vault.zip
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
           vault --version
 
       - name: Retrieve SSH key from Vault
@@ -290,10 +292,12 @@ jobs:
 
       - name: Install Vault CLI
         run: |
+          mkdir -p ~/.local/bin
           curl -fsSL https://releases.hashicorp.com/vault/1.15.2/vault_1.15.2_linux_amd64.zip -o /tmp/vault.zip
-          sudo unzip -o /tmp/vault.zip -d /usr/local/bin/
-          sudo chmod +x /usr/local/bin/vault
+          unzip -o /tmp/vault.zip -d ~/.local/bin/
+          chmod +x ~/.local/bin/vault
           rm /tmp/vault.zip
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
           vault --version
 
       - name: Retrieve SSH key from Vault
