Fix Vault CLI PATH propagation in GitHub Actions
Move 'vault --version' to a new step after updating GITHUB_PATH, so vault is available in PATH for all subsequent steps.

--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -239,7 +239,9 @@ jobs:
           chmod +x ~/.local/bin/vault
           rm /tmp/vault.zip
           echo "$HOME/.local/bin" >> $GITHUB_PATH
-          vault --version
+
+      - name: Check Vault CLI version
+        run: vault --version
 
       - name: Retrieve SSH key from Vault
         env:
@@ -298,7 +300,9 @@ jobs:
           chmod +x ~/.local/bin/vault
           rm /tmp/vault.zip
           echo "$HOME/.local/bin" >> $GITHUB_PATH
-          vault --version
+
+      - name: Check Vault CLI version
+        run: vault --version
 
       - name: Retrieve SSH key from Vault
         env:
