Fix .ssh directory ownership before SSH key retrieval
Add a step to chown ~/.ssh to the workflow user before writing SSH keys, to avoid permission denied errors.

--- a/.github/workflows/dev-infrastructure.yml
+++ b/.github/workflows/dev-infrastructure.yml
@@ -243,6 +243,10 @@ jobs:
       - name: Check Vault CLI version
         run: vault --version
 
+      - name: Fix .ssh directory ownership
+        run: |
+          sudo chown -R $USER:$USER ~/.ssh || true
+
       - name: Retrieve SSH key from Vault
         env:
           VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
@@ -303,6 +307,10 @@ jobs:
 
       - name: Check Vault CLI version
         run: vault --version
+
+      - name: Fix .ssh directory ownership
+        run: |
+          sudo chown -R $USER:$USER ~/.ssh || true
 
       - name: Retrieve SSH key from Vault
         env:
