--- a/ansible/dev/media-stack/inventory.ini
+++ b/ansible/dev/media-stack/inventory.ini
@@ -3,6 +3,6 @@ media-stack_worker ansible_host=192.168.50.200
 
 [media_stack:vars]
 ansible_user=root
-ansible_ssh_private_key_file=~/.ssh/media-stack_worker_id_ed25519
+ansible_ssh_private_key_file=~/ssh/media-stack_worker_id_ed25519
 ansible_python_interpreter=/usr/bin/python3
 ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
