Mount ~/ssh to /root/ssh in ansible container
- Ensures SSH keys written by workflow are available in the container at the expected path
- Removes ~/.ssh mount (no longer needed)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     working_dir: /workspace
     volumes:
       - .:/workspace
-      - ~/.ssh:/root/.ssh
+      - ~/ssh:/root/ssh
       - ansible_cache:/root/.ansible
     networks:
       - infra-network
